# llm-model-deprecation

./: .gitignore  CHANGELOG.md  README.md  action.yml  example_usage.py  pyproject.toml
.github/workflows/: llm-deprecation-check-example.yml
config/: llm-deprecation-models.json.example
llm_deprecation/: __init__.py  checker.py  cli.py  data.py  loader.py  models.py  scanner.py
scripts/: publish.sh
tests/: __init__.py  test_basic.py  test_scan.py
