[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-model-deprecation"
version = "1.1.0"
description = "Track and check deprecation status of LLM provider models (OpenAI, Anthropic, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sudharsana Viswanathan", email = "sudharsanaviswanathan@gmail.com" }]
keywords = ["llm", "openai", "anthropic", "deprecation", "models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
fetch = ["requests>=2.28"]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/techdevsynergy/llm-model-deprecation"
Documentation = "https://github.com/techdevsynergy/llm-model-deprecation#readme"

[project.scripts]
llm-deprecation = "llm_deprecation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_deprecation*"]
